// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly mandatory props only 1`] = `
<div
  className="root
        labelPositionAfter"
>
  <label
    className="inputWrap"
    htmlFor="test"
  >
    <input
      checked={false}
      className="input"
      disabled={false}
      id="test"
      name="test"
      onChange={null}
      required={false}
      type="checkbox"
    />
    <span
      className="label"
    >
      <span
        className="labelInner"
      >
        label
      </span>
    </span>
    <span
      className="toggle"
    />
  </label>
</div>
`;

exports[`rendering renders correctly with all props 1`] = `
<div
  className="root
        labelPositionAfter
        isRootStateWarning"
>
  <label
    className="inputWrap"
    htmlFor="test"
  >
    <input
      checked={true}
      className="input"
      disabled={true}
      id="test"
      name="test"
      onChange={null}
      required={true}
      type="checkbox"
      value="value"
    />
    <span
      className="label"
    >
      <span
        className="labelInner"
      >
        label
      </span>
    </span>
    <span
      className="toggle"
    />
  </label>
  <div
    className="description"
  >
    some help
  </div>
  <div
    className="error"
  >
    some error
  </div>
</div>
`;
